--- a/front/pages/game/role_detail.html
+++ b/front/pages/game/role_detail.html
@@ -47,14 +47,15 @@
             type: 'asc'
           },
           parseData: function (res) {
-            var obj = JSON.parse(res.data);
+            obj = JSON.parse(res.data);
             vHeroList = obj.stAllHero.vHeroList;
-            res.data = new Array();
-            for (i = 0; i < vHeroList.length; ++i) {
-            res.data[i] = {};
-              res.data[i].id = vHeroList[i].iHeroId;
-              res.data[i].level = vHeroList[i].iLevel;
-              res.data[i].star = vHeroList[i].iStar;
+            res.data = [];
+            for (const val of vHeroList) {
+              hero = {};
+              hero.id = val.iHeroId;
+              hero.level = val.iLevel;
+              hero.star = val.iStar;
+              res.data.push(hero);
             }
             console.log(res);
             return res;
