--- a/front/pages/gm/mail.html
+++ b/front/pages/gm/mail.html
@@ -47,7 +47,7 @@
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
-          for (i = 0; i < res.data.length; ++i) {
+          for (i = 0; res.data && i < res.data.length; ++i) {
             res.data[i].id = res.data[i].iMailId;
           }
           return res;
