--- a/front/pages/gm/cdk-add.html
+++ b/front/pages/gm/cdk-add.html
@@ -181,11 +181,17 @@
           $('#customlimit').addClass('layui-hide');
           $('#zonelimit').addClass('layui-hide');
           $('#exchangelimit').addClass('layui-hide');
+          zoneSelect.update({
+            layVerify: false,
+          });
           $('#rewardinfo').addClass('layui-hide');
           $('textarea[name=sRewardInfo]').removeAttr('lay-verify');
         } else {
           $('#customlimit').removeClass('layui-hide');
           $('#zonelimit').removeClass('layui-hide');
+          zoneSelect.update({
+            layVerify: 'required',
+          });
           $('#exchangelimit').removeClass('layui-hide');
           $('#rewardinfo').removeClass('layui-hide');
           $('textarea[name=sRewardInfo]').attr('lay-verify', 'required');
