--- a/front/pages/gm/cdk.html
+++ b/front/pages/gm/cdk.html
@@ -102,6 +102,9 @@
           case "add":
             add();
             break;
+          case "export":
+            mexport();
+            break;
         }
       });
 
@@ -126,12 +129,51 @@
           cdkTable.reload();
         })
       }
+
+      function mexport() {
+        let checkStatus = table.checkStatus('tableId');
+        let idsStr = '';
+        for (let i = 0;i < checkStatus.data.length; ++i) {
+          if (i != 0) idsStr += ',';
+          idsStr += checkStatus.data[i].id;
+        }
+        okUtils.ajax("/api/gm/cdk/export", "post", {idsStr: idsStr}, true).done(function (response) {
+          let names = new Array(checkStatus.data.length);
+          let rows = new Array();
+          let maxlen = 0;
+          for (let i = 0;i < checkStatus.data.length; ++i) {
+            let name = checkStatus.data[i].sCDKeyName;
+            names[i] = name;
+
+            let data = response.data[checkStatus.data[i].id+''].split('\n');
+            rows.push(data);
+            if (data.length > maxlen) maxlen = data.length;
+          }
+          for (let i = 0; i < rows.length; ++i) {
+            let j = maxlen - rows[i].length;
+            while (j-- > 0) {
+              rows[i].push("");
+            }
+          }
+
+          let newRows = rows[0].map(function (col, i) {
+             return rows.map(function (row) {
+                    return row[i];
+              })
+          });
+
+          table.exportFile(names, newRows);
+        }).fail(function (error) {
+          console.log(error);
+        });
+      }
     })
   </script>
   <!-- 头工具栏模板 -->
   <script type="text/html" id="toolbarTpl">
   <div class="layui-btn-container">
     <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+    <div class="layui-inline" lay-event="export"><i class="layui-icon layui-icon-export"></i></div>
   </div>
 </script>
 
