调整/api/gm/simplelist接口

--- a/front/pages/console.html
+++ b/front/pages/console.html
@@ -154,7 +154,7 @@
 
     okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
       zoneSelect.update({
-        data: response.data,
+        data: response.data["game"],
       });
     }).fail(function (error) {
       console.log(error);
