--- a/front/pages/game/online-time.html
+++ b/front/pages/game/online-time.html
@@ -75,7 +75,7 @@
 
     okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
       zoneSelect.update({
-        data: response.data,
+        data: response.data["game"],
         initValue: [1],
       });
     }).fail(function (error) {
