--- a/front/pages/gm/map-edit.html
+++ b/front/pages/gm/map-edit.html
@@ -57,7 +57,7 @@
 
       okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
         zoneSelect.update({
-          data: response.data,
+          data: response.data["game"],
           initValue: parent.editData.vZoneId,
         });
       }).fail(function (error) {
