--- a/front/pages/gm/activity-edit.html
+++ b/front/pages/gm/activity-edit.html
@@ -118,9 +118,9 @@
         },
       });
 
-      okUtils.ajax("/api/gm/zone/simplelist", "get", {all: true}, false).done(function (response) {
+      okUtils.ajax("/api/gm/zone/simplelist", "get", {game: true, all: true}, false).done(function (response) {
         zoneSelect.update({
-          data: response.data,
+          data: response.data["game"],
           initValue: apply_zone.split(','),
         });
       }).fail(function (error) {
