--- a/front/pages/gm/cdk-edit.html
+++ b/front/pages/gm/cdk-edit.html
@@ -133,13 +133,13 @@
         },
       });
 
-      okUtils.ajax("/api/gm/zone/simplelist", "get", {all: true}, false).done(function (response) {
+      okUtils.ajax("/api/gm/zone/simplelist", "get", {game: true, all: true}, false).done(function (response) {
         let ids = [99999];
         if (parent.editCDK.sZoneLimit != '') {
           ids = parent.editCDK.sZoneLimit.split(',');
         }
         zoneSelect.update({
-          data: response.data,
+          data: response.data["game"],
           initValue: ids,
         });
       }).fail(function (error) {
