--- a/front/pages/gm/mail-add.html
+++ b/front/pages/gm/mail-add.html
@@ -360,10 +360,10 @@
       });
       okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
         zoneSelect1.update({
-          data: response.data,
+          data: response.data["game"],
         });
         zoneSelect2.update({
-          data: response.data,
+          data: response.data["game"],
         });
       }).fail(function (error) {
         console.log(error);
