--- a/front/pages/gm/map-add.html
+++ b/front/pages/gm/map-add.html
@@ -54,7 +54,7 @@
 
       okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
         zoneSelect.update({
-          data: response.data,
+          data: response.data["game"],
         });
       }).fail(function (error) {
         console.log(error);
