--- a/front/pages/gm/bulletin-edit.html
+++ b/front/pages/gm/bulletin-edit.html
@@ -51,6 +51,16 @@
       </div>
 
       <div class="layui-form-item">
+        <label class="layui-form-label">类型</label>
+        <div class="layui-input-block">
+          <select name="iType">
+            <option value="0" selected>默认</option>
+            <option value="1">爱贝勇士</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">更新</button>
         </div>
@@ -73,6 +83,7 @@
       $("input[name='sTitle']").val(parent.editdata.sTitle);
       $("textarea[name='sContent']").val(parent.editdata.sContent);
       $("select[name='iDisplay']").val(parent.editdata.iDisplay);
+      $("select[name='iType']").val(parent.editdata.iType);
       form.render();
 
       //监听提交
