--- a/front/pages/gm/activity.html
+++ b/front/pages/gm/activity.html
@@ -90,13 +90,13 @@
           {
             field: "begin_time", title: "开始时间", align: "center", width: 180, templet: function (d) {
               let json = JSON.parse(d.configure_data);
-              return json.constrain.begin_time != undefined ? json.constrain.begin_time : "";
+              return json.constrain && json.constrain.begin_time != undefined ? json.constrain.begin_time : "";
             }
           },
           {
             field: "end_time", title: "结束时间", align: "center", width: 180, templet: function (d) {
               let json = JSON.parse(d.configure_data);
-              return json.constrain.end_time != undefined ? json.constrain.end_time : "";
+              return json.constrain && json.constrain.end_time != undefined ? json.constrain.end_time : "";
             }
           },
           { field: "configure_data", title: "配置数据", align: "center"},
