--- a/front/pages/game/recharge.html
+++ b/front/pages/game/recharge.html
@@ -20,7 +20,6 @@
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="add">补单</button>
-          <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
       </div>
     </form>
@@ -59,7 +58,7 @@
 
       okUtils.ajax("/api/gm/iap/list", "get", {zoneid: parent.zoneid}, false).done(function (response) {
         productSelect.update({
-          data: response.data["game"],
+          data: response.data,
         });
       }).fail(function (error) {
         console.log(error);
