--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -78,11 +78,18 @@
             <i class="ok-icon">&#xe654;</i>
             <cite is-close=false>总况</cite>
           </li>
+          <li lay-id="2-1-1" tab="index">
+            <i class="ok-icon">&#xe654;</i>
+            <cite is-close=false>GM1</cite>
+          </li>
         </ul>
 
         <div id="tabContent" class="layui-tab-content ok-tab-content">
           <div class="layui-tab-item layui-show">
             <iframe src='console.html' frameborder="0" scrolling="yes" width="100%" height="100%"></iframe>
+          </div>
+          <div class="layui-tab-item">
+            <iframe src='gm/gm.html' frameborder="0" scrolling="yes" width="100%" height="100%"></iframe>
           </div>
         </div>
       </div>
