去掉gm textarea disabled属性

--- a/front/pages/gm/gm.html
+++ b/front/pages/gm/gm.html
@@ -28,7 +28,7 @@
             <textarea name="cmd" lay-verify="required" lay-verType="tips" class="layui-textarea" rows="5">help</textarea>
           </div>
           <div class="layui-form-item" style="margin:0px">
-            <textarea name="result" class="layui-textarea" rows="30" disabled></textarea>
+            <textarea name="result" class="layui-textarea" rows="30"></textarea>
           </div>
         </form>
       </div>
@@ -48,7 +48,7 @@
             <textarea name="cmd2" lay-verify="required" lay-verType="tips" class="layui-textarea" rows="5">help</textarea>
           </div>
           <div class="layui-form-item" style="margin:0px">
-            <textarea name="result2" class="layui-textarea" rows="30" disabled></textarea>
+            <textarea name="result2" class="layui-textarea" rows="30"></textarea>
           </div>
         </form>
       </div>
